@@ -1,3 +1,7 @@
+2025-05-27  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Remove obsolete diagnostic references to FAM and Gamin.
+
 2025-05-04  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Require C++17 support. Add autoconf checks for C++17. Provide
